--- a/zustand/package.json
+++ b/zustand/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prismjs": "1.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-prism": "^4.3.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "3.4.3",
-    "zustand": "3.0.0-beta.0"
+    "zustand": "^5.0.1"
   },
   "scripts": {
-    "start": "create-react-app start",
-    "build": "create-react-app build",
-    "test": "create-react-app test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,7 +40,7 @@
   "devDependencies": {
     "customize-cra": "^1.0.0",
     "customize-cra-react-refresh": "^1.1.0",
-    "react-app-rewired": "^2.1.6",
+    "react-scripts": "^5.0.0",
     "webpack-bundle-analyzer": "^3.8.0"
   }
 }
